--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: cpp
 before_script:
 - sudo apt-get update -qq 
 - sudo apt-get install libgtest-dev -y
+- sudo apt-get install cmake -y
 - sudo cmake /usr/src/gtest/CMakeLists.txt
 - sudo make /usr/src/gtest/
 - sudo cp /usr/src/gtest/*.a /usr/lib
