--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ before_script:
 - sudo apt-get install libgtest-dev -y
 - sudo apt-get install cmake -y
 - sudo cmake /usr/src/gtest/CMakeLists.txt
-- sudo make /usr/src/gtest/Makefile
+- cd /usr/src/gtest
+- sudo make 
 - sudo ls /usr/src/gtest/
 - sudo cp /usr/src/gtest/*.a /usr/lib/
 - sudo ln -s /usr/lib/libgtest.a /usr/local/lib/gtest/libgtest.a
