--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_script:
 - sudo apt-get install libgtest-dev -y
 - sudo apt-get install cmake -y
 - sudo cmake /usr/src/gtest/CMakeLists.txt
-- cwd
+- pwd
 - cd /usr/src/gtest
 - sudo make 
 - sudo ls /usr/src/gtest/
