--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ before_script:
 - sudo apt-get update -qq 
 - sudo apt-get install libgtest-dev -y
 - sudo apt-get install cmake -y
+- sudo apt-get install g++ -y
 - sudo cmake /usr/src/gtest/CMakeLists.txt
 - cd /usr/src/gtest
 - sudo make 
@@ -18,4 +19,4 @@ deploy:
   provider: script
   skip_cleanup: true
   script:
-  - curl -T second-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -uneogen12:$BINTRAY_API_KEY "https://api.bintray.com/content/neogen12/First/first12/$TRAVIS_BUILD_NUMBER/helloworld-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
+  - curl -T IPFilter-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -uneogen12:$BINTRAY_API_KEY "https://api.bintray.com/content/neogen12/First/first12/$TRAVIS_BUILD_NUMBER/IPFilter-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
