--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(second)
+project(IPFilter)
 
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
@@ -10,12 +10,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED on)
 
 #enable_testing()
 
-add_executable(second main.cpp)
+add_executable(IPFilter main.cpp)
 
 #add_executable(second_test homework_test.cpp)
 #target_link_libraries(second_test ${GTEST_LIBRARIES} pthread)
 
-install(TARGETS second RUNTIME DESTINATION bin)
+install(TARGETS IPFilter RUNTIME DESTINATION bin)
 
 set(CPACK_GENERATOR DEB)
 
