--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.9)
 
-project(IPFilter VERSION $ENV{TRAVIS_BUILD_NUMBER})
+project(IPFilter VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
 
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
