--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,7 @@ include_directories(${GTEST_INCLUDE_DIRS})
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED on)
 
-#enable_testing()
-
 add_executable(IPFilter main.cpp)
-
-#add_executable(second_test homework_test.cpp)
-#target_link_libraries(second_test ${GTEST_LIBRARIES} pthread)
 
 install(TARGETS IPFilter RUNTIME DESTINATION bin)
 
@@ -26,3 +21,7 @@ set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
 set(CPACK_PACKAGE_CONTACT example@example.com)
 
 include(CPack)
+
+enable_testing()
+add_executable(second_test homework_test.cpp)
+target_link_libraries(second_test ${GTEST_LIBRARIES} pthread)
